...
                                        Text("#\(tag)")
                                    }
                                }
                            }
                            if let urls = blog.attachmentsUrls, !urls.isEmpty {
                                VStack {
                                    Text("Attachments:")
                                    ForEach(urls, id: \.self) { url in
                                        Text(url)
                                    }
                                }
                            }
                            Text(formatTimestamp(blog.updatedAt))
...
